feat(DuoDuo): 切换到1.8. 整个项目